--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">s7mstore</string>
+    <string name="google_client_id">YOUR_WEB_CLIENT_ID</string>
 </resources>
